#add_library(gui STATIC gui_main.cpp mainwindow.cpp)
set(CMAKE_INCLUDE_CURRENT_DIR ON) 
set(CMAKE_AUTOMOC ON) 
set(CMAKE_AUTOUIC ON) 
set(CMAKE_AUTORCC ON) 

find_package(Qt5 REQUIRED Widgets)
find_package(Qt5Charts REQUIRED)
find_package(Qt5Widgets REQUIRED)
find_package(Qt5Gui REQUIRED)
find_package(Qt5Core REQUIRED)
find_package(Qt5OpenGL REQUIRED)
qt5_wrap_cpp( MOC mainwindow.h) 
qt5_wrap_ui( UIC mainwindow.ui) 
